snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
c48fad9ce021509f7ae2a5209cb54628